# minispdlog

./: .gitignore
include/minispdlog/: async.h  asynclogger.h  logger.h  minispdlog.h  patternformatter.h  registry.h
include/minispdlog/details/: asyncmsg.h  circularqueue.h  mpmcblockingqueue.h  threadpool.h
include/minispdlog/sinks/: basesink.h  colorconsolesink.h  filesink.h  rotatingfilesink.h
src/: CMakeLists.txt  asynclogger.cpp  level.cpp  logger.cpp  patternformatter.cpp  registry.cpp
src/details/: threadpool.cpp
tests/: CMakeLists.txt  testperformance.cpp  testspdlog.cpp
